@startuml animation

class Animation {
    {field} fps
}

class Frame {
    {field} img
}

class Brush {
    {field} size
}

class Position {
    {field} x
    {field} y
}

class Color {
    {field} name
    {field} rgb
}

Animation -* Frame : is constituted of >
Animation -- Frame : is current of <
Frame -- Color : is background color of <
Brush -- Position : was last pressed at >
Brush -- Color : is current color of <

@enduml